# pitch-detectors

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Taskfile.yml  freeze.txt  no_docker_pytest.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.github/workfows/: ci.yml
docker/: base.dockerfile  pitch-detectors.dockerfile
pitch_detectors/: algorithms.py  config.py  evaluation.py  schemas.py  util.py
pitch_detectors/algorithms/: __init__.py  base.py  crepe.py  ensemble.py  penn.py  piptrack.py  praatac.py  praatcc.py  praatshs.py  pyin.py  rapt.py  reaper.py  spice.py  swipe.py  torchcrepe.py  torchyin.py  world.py  yaapt.py  yin.py
pitch_detectors/evaluation/: __main__.py  table.py
pitch_detectors/evaluation/datasets/: __init__.py  base.py  mdb_stem_synth.py  mir_1k.py
scripts/: download_models.py  run_algorithm.py
tests/: algorithms_test.py  conftest.py  ensemble_test.py  gpu_test.py
